# bitshifter

./: Makefile  pyproject.toml  test.py
bitshifter/: __init__.py  bitshifter.py
