[project]
name = "bitshifter"
version = "0.1"
authors = [{ name = "Noa-Emil Nissinen", email = "4shadoww0@gmail.com" }]
description = "Utility for calculating bits shifts and masks"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://gitlab.com/4shadoww/bitshifter"
Issues = "https://gitlab.com/4shadoww/bitshifter/-/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
